edition = "2023";

package wayplatform.connect.tachograph.card.v1;

// Represents the application identification data for a driver card.
//
// Corresponds to the `DriverCardApplicationIdentification` data type.
// See Data Dictionary, Section 2.61.
message DriverCardApplicationIdentification {
  // See Data Dictionary, Section 2.61, `typeOfTachographCardId`.
  int32 type_of_tachograph_card_id = 1;

  // See Data Dictionary, Section 2.61, `cardStructureVersion`.
  bytes card_structure_version = 2;

  // See Data Dictionary, Section 2.61, `noOfEventsPerType`.
  int32 events_per_type_count = 3;

  // See Data Dictionary, Section 2.61, `noOfFaultsPerType`.
  int32 faults_per_type_count = 4;

  // See Data Dictionary, Section 2.61, `activityStructureLength`.
  int32 activity_structure_length = 5;

  // See Data Dictionary, Section 2.61, `noOfCardVehicleRecords`.
  int32 card_vehicle_records_count = 6;

  // See Data Dictionary, Section 2.61, `noOfCardPlaceRecords`.
  int32 card_place_records_count = 7;

  // Gen2+ fields

  // See Data Dictionary, Section 2.61, `noOfGNSSADRecords`.
  int32 gnss_ad_records_count = 8;

  // See Data Dictionary, Section 2.61, `noOfSpecificConditionRecords`.
  int32 specific_condition_records_count = 9;

  // See Data Dictionary, Section 2.61, `noOfCardVehicleUnitRecords`.
  int32 card_vehicle_unit_records_count = 10;
}
