edition = "2023";

package wayplatform.connect.tachograph.card.v1;

// Common Gen2 EFs
import "wayplatform/connect/tachograph/card/v1/application_identification_v2.proto";
import "wayplatform/connect/tachograph/card/v1/border_crossings.proto";
// Workshop-specific EFs
import "wayplatform/connect/tachograph/card/v1/calibrations.proto";
// Workshop-specific Gen2 EFs
import "wayplatform/connect/tachograph/card/v1/calibrations_add_data.proto";
import "wayplatform/connect/tachograph/card/v1/card_icc_identification.proto";
import "wayplatform/connect/tachograph/card/v1/card_identification.proto";
// Common card EFs
import "wayplatform/connect/tachograph/card/v1/chip_identification.proto";
import "wayplatform/connect/tachograph/card/v1/control_activity_data.proto";
import "wayplatform/connect/tachograph/card/v1/current_usage.proto";
import "wayplatform/connect/tachograph/card/v1/driver_activity.proto";
import "wayplatform/connect/tachograph/card/v1/event_data.proto";
import "wayplatform/connect/tachograph/card/v1/fault_data.proto";
import "wayplatform/connect/tachograph/card/v1/gnss_places.proto";
import "wayplatform/connect/tachograph/card/v1/gnss_places_authentication.proto";
import "wayplatform/connect/tachograph/card/v1/load_type_entries.proto";
import "wayplatform/connect/tachograph/card/v1/load_unload_operations.proto";
import "wayplatform/connect/tachograph/card/v1/no_of_calibrations_since_download.proto";
import "wayplatform/connect/tachograph/card/v1/places.proto";
import "wayplatform/connect/tachograph/card/v1/places_authentication.proto";
import "wayplatform/connect/tachograph/card/v1/sensor_installation_data.proto";
import "wayplatform/connect/tachograph/card/v1/specific_conditions.proto";
import "wayplatform/connect/tachograph/card/v1/vehicle_units_used.proto";
import "wayplatform/connect/tachograph/card/v1/vehicles_used.proto";
import "wayplatform/connect/tachograph/card/v1/vu_configuration.proto";
import "wayplatform/connect/tachograph/card/v1/workshop_application_identification.proto";
import "wayplatform/connect/tachograph/card/v1/workshop_application_identification_v2.proto";
import "wayplatform/connect/tachograph/card/v1/workshop_card_holder_identification.proto";

// Represents the fully parsed content of a workshop card file.
//
// See regulation document Appendix 2, Section 4.3.
message WorkshopCardFile {
  // --- Common Card Data ---
  IccIdentification icc = 1;
  ChipIdentification ic = 2;
  CardIdentification identification = 3;

  // --- Workshop Specific Data ---
  WorkshopApplicationIdentification application_identification = 4;
  WorkshopCardHolderIdentification holder_identification = 5;
  Calibrations calibrations = 6;
  SensorInstallationData sensor_installation_data = 7;
  NoOfCalibrationsSinceDownload calibrations_since_download = 8;

  // --- Driver-related Data (also on Workshop cards) ---
  EventData events_data = 9;
  FaultData faults_data = 10;
  DriverActivity driver_activity_data = 11;
  VehiclesUsed vehicles_used = 12;
  Places places = 13;
  CurrentUsage current_usage = 14;
  ControlActivityData control_activity_data = 15;
  SpecificConditions specific_conditions = 16;

  // --- Gen2 Specific Fields ---
  VehicleUnitsUsed vehicle_units_used = 17;
  GnssPlaces gnss_places = 18;
  WorkshopApplicationIdentificationV2 application_identification_v2 = 19;
  PlacesAuthentication places_authentication = 20;
  GnssPlacesAuthentication gnss_places_authentication = 21;
  BorderCrossings border_crossings = 22;
  LoadUnloadOperations load_unload_operations = 23;
  LoadTypeEntries load_type_entries = 24;
  CalibrationsAddData calibrations_add_data = 25;
  VuConfiguration vu_configuration = 26;
}
}
